Add new category to posts

--- a/_posts/2018-10-07-certified-scrum-master.html
+++ b/_posts/2018-10-07-certified-scrum-master.html
@@ -5,6 +5,7 @@ date: '2018-10-07 14:17:38 +0100'
 categories:
 - Agile
 - Motivation
+- Teams
 ---
 
 <p><img class="l" src="/assets/images/certifications/psmi.svg" alt="" width="70"> I just achieved my <a href="https://www.scrum.org/user/405331">Professional Scrum Master (PSM I) certification</a> at Scrum.org.</p>
