--- a/_posts/2019-03-05-empowered-product-teams.html
+++ b/_posts/2019-03-05-empowered-product-teams.html
@@ -5,6 +5,7 @@ date: '2019-03-05 18:58:02 +0100'
 categories:
 - Agile
 - Motivation
+- Teams
 ---
 
 <p><a href="https://svpg.com/empowered-product-teams/">Empowered product teams</a> - so much goodness in this article,
