--- a/_posts/2019-03-19-building-trust-as-a-leader.html
+++ b/_posts/2019-03-19-building-trust-as-a-leader.html
@@ -4,6 +4,7 @@ excerpt: The 3 most effective ways to build trust as a leader
 date: '2019-03-19 19:21:07 +0100'
 categories:
 - Motivation
+- Teams
 ---
 
 <p>This Signal v. Noise post, <a href="https://m.signalvnoise.com/the-3-most-effective-ways-to-build-trust-as-a-leader/">the 3 most effective ways to build trust as a leader</a>,
