--- a/_posts/2021-07-13-certified-scrum-product-owner.html
+++ b/_posts/2021-07-13-certified-scrum-product-owner.html
@@ -5,6 +5,7 @@ date: '2021-07-13 11:13:43 +0100'
 categories:
 - Agile
 - Motivation
+- Teams
 ---
 
 <p><img class="l" src="/assets/images/certifications/pspoi.svg" alt="" width="70"> I've been interested in <strong>value</strong> for as long as I remember: the "why", what it is, how to build and deliver it effectively, and how to measure it. Now I've completed one more stepping stone on my agile journey by acquiring the <a href="https://www.scrum.org/user/405331">Professional Scrum Product Owner (PSPO I) certification</a> at Scrum.org.</p>
