--- a/_posts/2021-09-07-the-disrupted-workplace.html
+++ b/_posts/2021-09-07-the-disrupted-workplace.html
@@ -4,6 +4,7 @@ excerpt:
 date: '2021-09-07 19:04:23 +0100'
 categories:
 - Motivation
+- Teams
 ---
 
 <p>Technology is disruptive. If technology exists, and if it's proven useful - even making life easier sometimes - then that technology will be used. Those who wait are left behind.</p>
