--- a/_posts/2022-07-11-death-to-dependencies.html
+++ b/_posts/2022-07-11-death-to-dependencies.html
@@ -5,6 +5,7 @@ date: '2022-07-11 13:36:47 +0100'
 categories:
 - Agile
 - Motivation
+- Teams
 ---
 <figure>
   <img src="/assets/images/posts/Dependencies_Jim_Benson.png" alt="" />
