--- a/_posts/2019-01-28-focus-on-how-you-work-not-why.html
+++ b/_posts/2019-01-28-focus-on-how-you-work-not-why.html
@@ -5,6 +5,7 @@ date: '2019-01-28 17:18:38 +0100'
 categories:
 - Motivation
 - Mindfulness
+- Teams
 ---
 
 <p>Start with Why, but <a href="http://www.bbc.com/capital/story/20190125-focus-on-how-you-work-not-why">the "How" is equally important</a>. Be mindful, go for a walk, and do small changes that improve your and your team's well-being and efficiency.</p>
