--- a/work.html
+++ b/work.html
@@ -42,7 +42,7 @@ permalink: /work/
 
 <div class="l-row">
   <div class="l-cell l-cell-12">
-    <h2 id="work-certifications">Certifications (Scrum.org)</h2>
+    <h2 id="work-certifications">Certifications</h2>
     {% include certifications.html %}
   </div>
 </div>
