--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@ permalink: /work/
   <ul class="nav-log nav-log--categories">  
     <li class="cat-item"><a href="#work-projects">Selected projects</a></li>
     <li class="cat-item"><a href="#work-summary">Experience summary</a></li>
-    <li class="cat-item"><a href="#work-certifications">Certifications (Scrum.org)</a></li>
+    <li class="cat-item"><a href="#work-certifications">Certifications</a></li>
   </ul>  
 </nav>
 
