--- a/_posts/2022-08-19-beautiful-questions.html
+++ b/_posts/2022-08-19-beautiful-questions.html
@@ -1,6 +1,6 @@
 ---
 title: Beautiful Questions
-excerpt: 
+excerpt: I've always been fascinated by good and powerful questions. Recently, I've read two good books on the topic.
 date: '2022-08-19 07:46:13 +0100'
 categories:
 - Agile
