Add category in posts

--- a/_posts/2022-07-12-effective-teams-and-leadership.html
+++ b/_posts/2022-07-12-effective-teams-and-leadership.html
@@ -4,6 +4,7 @@ excerpt: To keep myself on my toes and try out new ideas in practice, I'm always
 date: '2022-07-12 07:18:43 +0100'
 categories:
 - Agile
+- Books
 - Motivation
 - Teams
 image:
