--- a/_posts/2022-08-29-on-business-agility.html
+++ b/_posts/2022-08-29-on-business-agility.html
@@ -18,21 +18,21 @@ image:
   </figcaption>
 </figure>
 
-<p>What is <strong>Business Agility</strong> and why is it important? Team-level scaled agility is a local optimization that will get you only that far. In the complex <em>Explore</em> domain, you'll need the whole organisation to respond to rapid change and new opportunities. In other words, you'll also need business/leadership agility.</p>
+<p>What is <strong>Business Agility</strong> and why is it important? Team-level scaled agility is a local optimisation that will get you only that far. In the complex <em>Explore</em> domain, you'll need the whole organisation to respond to rapid change and new opportunities. In other words, you'll also need business/leadership agility.</p>
 
 <h2>The 6 Enablers of Business Agility</h2>
 
 <p><a href="https://www.6enablers.com/">The 6 Enablers of Business Agility</a> by <strong>Karim Harbott</strong> is one of the best books on business agility I've read so far (see some <a href="#business_agility_books">other books</a> that I've liked later in the article).</p>
 <p>The goal is not to increase agility; the goal is to create better outcomes by increasing agility in the whole organisation, involving technology, product, people and business leadership—affecting all the behaviours that shape the underlying culture. Most importantly, we want to create value for the customer.</p>
 <p>What's interesting to note here is that <strong>Alistair Cockburn</strong>, one of the co-signers of the Agile Manifesto, says himself that <q>agile has nothing to do with software. I consider it an accident of history that a group of programmers decoded this particular thing</q> (source on <a href="https://www.linkedin.com/posts/alistaircockburn_agil-systemudvikling-alistair-cockburn-activity-6963480699815227392-7JZn">LinkedIn</a>).</p>
-<p>Many books about business agility focus only on certain areas, much like their team agility counterparts focus only on team-level agility. These other areas inlude decentralized leadership, mindset and organisational culture. These books are motivational and well-written, and only a few of them have business agility in their title. What is common in these books is that team agility (Ways of Working) is just one part of the big picture. The second common denominator in these books is their focus on modern leadership.</p>
+<p>Many books about business agility focus only on certain areas, much like their team agility counterparts focus only on team-level agility. These other areas include decentralised leadership, mindset and organisational culture. These books are motivational and well-written, and only a few of them have business agility in their title. What is common in these books is that team agility (Ways of Working) is just one part of the big picture. The second common denominator in these books is their focus on modern leadership.</p>
 <p>What I like about Karim's book is that it presents a practical holistic picture of what you need to do to succeed, with just the right amount of history and context to get the actionable message through. The book is very well-researched, well-written, and well-organised, putting the team-level agility (and the related frameworks) into a larger context: the organisational ecosystem.</p>
 <p>You'd better pay close attention to all these six enablers described in the book in your organisation—not only Ways of Working—to avoid the sometimes-heard comment <q>agility doesn't work here</q> :)</p>
 
 <ul>
   <li>Leadership and Management</li>
-  <li>Organizational Culture</li>
-  <li>Organizational Structure</li>
+  <li>Organisational Culture</li>
+  <li>Organisational Structure</li>
   <li>People and Engagement</li>
   <li>Governance and Funding</li>
   <li>Ways of Working</li>
