--- a/_posts/2022-08-29-on-business-agility.html
+++ b/_posts/2022-08-29-on-business-agility.html
@@ -18,7 +18,7 @@ image:
   </figcaption>
 </figure>
 
-<p>What is <strong>Business Agility</strong> and why is it important? Team-level scaled agility is a local optimisation that will get you only that far. In the complex <em>Explore</em> domain, you'll need the whole organisation to respond to rapid change and new opportunities. In other words, you'll also need business/leadership agility.</p>
+<p>What is <strong>Business Agility</strong> and why is it important? Team-level scaled agility without the required structural and cultural changes is a local optimisation that will get you only that far. In the complex <em>Explore</em> domain, you'll need the whole organisation to respond to rapid change and new opportunities. In other words, you'll also need business/leadership agility.</p>
 
 <h2>The 6 Enablers of Business Agility</h2>
 
