--- a/_posts/2022-08-29-on-business-agility.html
+++ b/_posts/2022-08-29-on-business-agility.html
@@ -18,15 +18,23 @@ image:
   </figcaption>
 </figure>
 
-<p>What is <strong>Business Agility</strong> and why is it important? Team-level scaled agility without the required structural and cultural changes is a local optimisation that will get you only that far. In the complex <em>Explore</em> domain, you'll need the whole organisation to respond to rapid change and new opportunities. In other words, you'll also need business/leadership agility.</p>
+<p>What is <strong>Business Agility</strong> and why is it important? Team-level scaled agility without the required structural and cultural changes is a local optimisation that will get you only that far. In the complex <em>Explore</em> domain, you'll need the whole organisation to respond to rapid change and new opportunities. In other words, you'll also need business agility with 21st-century leadership.</p>
 
 <h2>The 6 Enablers of Business Agility</h2>
 
-<p><a href="https://www.6enablers.com/">The 6 Enablers of Business Agility</a> by <strong>Karim Harbott</strong> is one of the best books on business agility I've read so far (see some <a href="#business_agility_books">other books</a> that I've liked later in the article).</p>
+<p><a href="https://www.6enablers.com/">The 6 Enablers of Business Agility</a> by <strong>Karim Harbott</strong> is one of the best books on business agility I've read so far (see the list of some <a href="#business_agility_books">other books</a> I've liked later in the article).</p>
 <p>The goal is not to increase agility; the goal is to create better outcomes by increasing agility in the whole organisation, involving technology, product, people and business leadership—affecting all the behaviours that shape the underlying culture. Most importantly, we want to create value for the customer.</p>
-<p>What's interesting to note here is that <strong>Alistair Cockburn</strong>, one of the co-signers of the Agile Manifesto, says himself that <q>agile has nothing to do with software. I consider it an accident of history that a group of programmers decoded this particular thing</q> (source on <a href="https://www.linkedin.com/posts/alistaircockburn_agil-systemudvikling-alistair-cockburn-activity-6963480699815227392-7JZn">LinkedIn</a>).</p>
-<p>Many books about business agility focus only on certain areas, much like their team agility counterparts focus only on team-level agility. These other areas include decentralised leadership, mindset and organisational culture. These books are motivational and well-written, and only a few of them have business agility in their title. What is common in these books is that team agility (Ways of Working) is just one part of the big picture. The second common denominator in these books is their focus on modern leadership.</p>
-<p>What I like about Karim's book is that it presents a practical holistic picture of what you need to do to succeed, with just the right amount of history and context to get the actionable message through. The book is very well-researched, well-written, and well-organised, putting the team-level agility (and the related frameworks) into a larger context: the organisational ecosystem.</p>
+<p>What's interesting to note here is that <strong>Alistair Cockburn</strong>, one of the co-signers of the Agile Manifesto, says himself that:</p>
+<blockquote>
+  <p>Agile has nothing to do with software. I consider it an accident of history that a group of programmers decoded this particular thing.</p>
+  <footer>
+    <cite>
+      Source: <a href="https://www.linkedin.com/posts/alistaircockburn_agil-systemudvikling-alistair-cockburn-activity-6963480699815227392-7JZn">LinkedIn</a>
+    </cite>
+  </footer>
+</blockquote>
+<p>Many books about business agility focus only on certain areas, much like their team agility counterparts focus only on team-level agility. These other areas include decentralised leadership, mindset and organisational culture. These books are motivational and well-written, and only a few of them have business agility in their title. What is common in these books is that team agility (Ways of Working) is just one part of the big picture. The second common denominator is their focus on modern leadership.</p>
+<p>What I like about Karim's book is that it presents a practical holistic picture of what you need to do to succeed, with just the right amount of history and context to get the actionable message through. The book is very well-researched, well-written, and well-organised, putting the team-level agility (and the related frameworks) into a larger context and prerequisite: the supporting <em>organisational ecosystem</em>.</p>
 <p>You'd better pay close attention to all these six enablers described in the book in your organisation—not only Ways of Working—to avoid the sometimes-heard comment <q>agility doesn't work here</q> :)</p>
 
 <ul>
@@ -53,7 +61,7 @@ image:
 
 <ul>
   <li><a href="https://www.amazon.com/Agile-Non-Software-Teams-Practical-Journey-dp-0988001659/dp/0988001659/">Agile for Non-Software Teams</a>, by Gil Broza</li>
-  <li><a href="https://www.amazon.com/Agile-Adoption-Transformation-Survival-Guide/dp/1105735729/">An Agile Adoption And Transformation Survival Guide</a>, by Michael Sahota</li>
+  <li><a href="https://www.infoq.com/minibooks/agile-adoption-transformation/">An Agile Adoption And Transformation Survival Guide</a>, by Michael Sahota</li>
   <li><a href="https://www.amazon.com/Doing-Agile-Right-Transformation-Without/dp/163369870X/">Doing Agile Right</a>, by Darrell Rigby, Sarah Elk, Steve Berez</li>
   <li><a href="https://www.amazon.com/Leading-Beyond-Change-Practical-Evolving/dp/1523093463/">Leading Beyond Change</a>, by Michael K. Sahota, Audree Tara Sahota</li>
   <li><a href="https://www.amazon.com/Management-3-0-Developers-Developing-Addison-Wesley/dp/0321712471/">Management 3.0</a>, by Jurgen Appelo</li>
