--- a/_posts/2022-08-31-scaling-scrum.html
+++ b/_posts/2022-08-31-scaling-scrum.html
@@ -7,7 +7,7 @@ categories:
 - Motivation
 - Teams
 image:
-  path: /assets/images/social/less_framework.png.jpg
+  path: /assets/images/social/less_framework.png
 ---
 <figure>
   <img src="/assets/images/posts/less_framework.png" alt="" />
