--- a/_posts/2023-04-04-finland-joins-nato.html
+++ b/_posts/2023-04-04-finland-joins-nato.html
@@ -1,6 +1,6 @@
 ---
 title: Finland joins NATO
-excerpt: Today, 4 April 2023, Finland became the 31st member of NATO. We'll never again be alone with the Russian fascist state.
+excerpt: Today, 4 April 2023, Finland became the 31st member of NATO. We’ll never again be alone with the Russian fascist state.
 date: '2023-04-04 17:03:27 +0100'
 categories:
 - General
@@ -16,9 +16,9 @@ image:
   </figcaption>
 </figure>
 
-<p>Today, 4 April 2023 is a historical day, and an emotional moment in time for me: <strong>Finland became the 31st member of <a href="https://www.nato.int/"><abbr title="North Atlantic Treaty Organization">NATO</abbr></a></strong>. And today, I'm in the mountains to celebrate this day. This morning, when I was again listening to the birds sing their hearts out, and watching the 4000+ meter snow- and ice-capped mountains glow in the sun, I felt grateful for this moment. We'll never again be alone with the Russian fascist state.</p>
-<p>The mountains are neutral. It's us humans who project our feelings, dreams and aspirations onto them. We say that mountains have dignity; yet they can kill us in a couple of seconds if we're in the wrong place at the wrong time. We can' t conquer them, we can only visit and cherish them. Mountains will stay here long after we're gone.</p>
-<p>As human, I can't match the mountain. As human, it's harder to be neutral, especially when it comes to values. And as human, I feel pain when the Russian terrorist state continues its war and aggression against the West, still in 2023. Both my grandfathers fought in the war against the Soviet Union more than 80 years ago. Even as a small child, I saw what the war did to them. And today, our enemy is still the same. Only this time, fascist Russia is threatening the West with nuclear weapons. I can only admire the Ukrainian spirit and resilience.</p>
+<p>Today, 4 April 2023 is a historical day, and an emotional moment in time for me: <strong>Finland became the 31st member of <a href="https://www.nato.int/"><abbr title="North Atlantic Treaty Organization">NATO</abbr></a></strong>. And today, I’m in the mountains to celebrate this day. This morning, when I was again listening to the birds sing their hearts out, and watching the 4000+ meter snow- and ice-capped mountains glow in the sun, I felt grateful for this moment. We’ll never again be alone with the Russian fascist state.</p>
+<p>The mountains are neutral. It’s us humans who project our feelings, dreams and aspirations onto them. We say that mountains have dignity; yet they can kill us in a couple of seconds if we’re in the wrong place at the wrong time. We can’t conquer them, we can only visit and cherish them. Mountains will stay here long after we’re gone.</p>
+<p>As human, I can’t match the mountain. As human, it’s harder to be neutral, especially when it comes to values. And as human, I feel pain when the Russian terrorist state continues its war and aggression against the West, still in 2023. Both my grandfathers fought in the war against the Soviet Union more than 80 years ago. Even as a small child, I saw what the war did to them. And today, our enemy is still the same. Only this time, fascist Russia is threatening the West with nuclear weapons. I can only admire the Ukrainian spirit and resilience.</p>
 
 <figure>
   <img src="/assets/images/posts/finland_joins_nato.jpg" alt="" />
@@ -28,5 +28,5 @@ image:
   </figcaption>
 </figure>
 
-<p>30 March 2023—the day when all the 30 NATO countries had approved Finland's application—became the day that I'd been waiting for about 30 years. And finally today, on 4 April, after a good off-piste run, we're celebrating the day with a bottle of Prosecco in the Italian Alps. This is a day to remember for the rest of my life!</p>
-<p>I know which side I'm on, and I hope that Sweden joins the Alliance soon after. Congrats Finland, congrats Nato, and Slava Ukraini!</p>
+<p>30 March 2023—the day when all the 30 NATO countries had approved Finland’s application—became the day that I’d been waiting for about 30 years. And finally today, on 4 April, after a good off-piste run, we’re celebrating the day with a bottle of Prosecco in the Italian Alps. This is a day to remember for the rest of my life!</p>
+<p>I know which side I’m on, and I hope that Sweden joins the Alliance soon after. Congrats Finland, congrats Nato, and Slava Ukraini!</p>
