--- a/_posts/2023-07-13-on-happiness.html
+++ b/_posts/2023-07-13-on-happiness.html
@@ -55,10 +55,10 @@ image:
 <p>So, how can the “happiest people in the world” elect a right-wing, racist government in 2023—<em>“a cabinet of horrors”</em>, as Süddeutsche Zeitung in Germany put it? As a Finn living abroad, and as a human being, I find it incomprehensible. Perhaps it’s the result of the overall polarisation and bigotry in social media and in the world, reflected also in Finland. This is very unlikely to increase happiness for anyone.</p>
 
 <h3>Trust</h3>
-<p>On the other hand, Finns (along with other Nordic people) have a high level of trust in democratic institutions. However, <em>blindly trusting the authorities</em>—like the Swedes did during the COVID-19 pandemic—can be a big mistake, undermine democracy, and even turn into a catastrophe. That’s what happened in Sweden, with still no one taking responsibility for the failed pandemic response, and with no lessons learnt.</p>
+<p>On the other hand, Finns (along with other Nordic people) have a high level of trust in democratic institutions. However, <em>blindly trusting national authorities</em>—like the Swedes did during the COVID-19 pandemic—can be a big mistake, undermine democracy, and even turn into a catastrophe. That’s what happened in Sweden, with still no one taking responsibility for the failed pandemic response, and with no lessons learnt.</p>
 
 <h3>The “Dark Side”</h3>
-<p>I’d also argue that in Finland it’s more socially acceptable to not feel well, and be vocal about mental health issues, compared with the other countries I’ve lived in. Can this genuine and <a href="https://www.goodreads.com/book/show/58734811-bittersweet">bittersweet</a> attitude be one possible explanation for the “happiest people” result? Just a thought.</p>
+<p>I’d argue that in Finland it’s more socially acceptable to not feel well, and be vocal about mental health issues, compared with the other countries I’ve lived in. Can this genuine and <a href="https://www.goodreads.com/book/show/58734811-bittersweet">bittersweet</a> attitude be one possible explanation for the “happiest people” result? Just a thought.</p>
 
 <h2>Nordic People: the Least Lonely People in Europe</h2>
 
