--- a/_posts/2023-08-28-agile-events-are-habits.html
+++ b/_posts/2023-08-28-agile-events-are-habits.html
@@ -1,5 +1,5 @@
 ---
-title: Agile events are habits
+title: Agile Events Are Habits
 excerpt: Our habits either help or hinder our agility. And nowhere else is it more visible than when people meet.
 date: '2023-08-28 15:08:07 +0100'
 categories:
