Add and optimise some images

--- a/_posts/2017-07-31-punta-gnifetti-signalkuppe-summit.html
+++ b/_posts/2017-07-31-punta-gnifetti-signalkuppe-summit.html
@@ -29,6 +29,20 @@ image:
 </figure>
 
 <figure>
+  <img src="/assets/images/posts/4000m_punta_gnifetti_31072017_5.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Beautiful morning on the Lys Glacier, on July 31, 2017. <i>Photo by Aki Kärkkäinen.</i></p>
+  </figcaption>
+</figure>
+
+<figure>
+  <img src="/assets/images/posts/4000m_punta_gnifetti_31072017_4.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Going up on the Lys Glacier—next to some impressive crevasses—on July 31, 2017. <i>Photo by Aki Kärkkäinen.</i></p>
+  </figcaption>
+</figure>
+
+<figure>
   <img src="/assets/images/posts/4000m_punta_gnifetti_31072017_3.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Coming down from Punta Gnifetti (Signalkuppe) on the Lys Glacier, with lots of deep crevasses along the way. <i>Photo by Aki Kärkkäinen.</i></p>
