Fix some markup

--- a/_posts/2022-03-22-what-is-an-expert.html
+++ b/_posts/2022-03-22-what-is-an-expert.html
@@ -13,8 +13,7 @@ image:
 <figure>
   <img src="/assets/images/posts/being_an_expert.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">     
-      Photo by <i><a href="https://unsplash.com/@californong">Nong V</a></i> on <a href="https://unsplash.com/s/photos/focus">Unsplash</a>
+    <p class="figcaption">Photo by <i><a href="https://unsplash.com/@californong">Nong V</a></i> on <a href="https://unsplash.com/s/photos/focus">Unsplash</a></p>
   </figcaption>
 </figure>
 
