--- a/_posts/2022-06-30-last-day-at-skatteverket.html
+++ b/_posts/2022-06-30-last-day-at-skatteverket.html
@@ -14,8 +14,7 @@ image:
 <figure>
   <img src="/assets/images/posts/skatteverket_1.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">     
-      Skatteverket, June 30, 2022. Photo by <i>Aki Kärkkäinen.</i> 
+    <p class="figcaption">Skatteverket, June 30, 2022. Photo by <i>Aki Kärkkäinen.</i></p>
   </figcaption>
 </figure>
 
@@ -27,8 +26,7 @@ image:
 <figure>
   <img src="/assets/images/posts/skatteverket_2.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">     
-      Members of my team at Skatteverket, June 29, 2022. Left to right: me, Fredde (Fredrik) Kullberg, Amir Mujezinovic, Hassan Ftouni, Tibor Lundberg, Andreas Tilly. Photo by <i>Aki Kärkkäinen.</i> 
+    <p class="figcaption">Members of my team at Skatteverket, June 29, 2022. Left to right: me, Fredde (Fredrik) Kullberg, Amir Mujezinovic, Hassan Ftouni, Tibor Lundberg, Andreas Tilly. Photo by <i>Aki Kärkkäinen.</i></p>
   </figcaption>
 </figure>
 
