--- a/_posts/2022-07-12-effective-teams-and-leadership.html
+++ b/_posts/2022-07-12-effective-teams-and-leadership.html
@@ -13,8 +13,7 @@ image:
 <figure>
   <img src="/assets/images/posts/team_books.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      Some of my favourite books on effective teams and leadership.
+    <p class="figcaption">Some of my favourite books on effective teams and leadership.</p>
   </figcaption>
 </figure>
 
