--- a/_posts/2022-08-29-on-business-agility.html
+++ b/_posts/2022-08-29-on-business-agility.html
@@ -13,8 +13,7 @@ image:
 <figure>
   <img src="/assets/images/posts/the_6_enablers_of_business_agility.png" alt="" />
   <figcaption>
-    <p class="figcaption">
-      Karim Harbott's <i>The 6 Enablers of Business Agility</i>
+    <p class="figcaption">Karim Harbott's <i>The 6 Enablers of Business Agility</i></p>
   </figcaption>
 </figure>
 
@@ -54,8 +53,7 @@ image:
 <figure>
   <img src="/assets/images/posts/business_agility_books.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Some of my favourite books related to business agility.</i>
+    <p class="figcaption"><i>Some of my favourite books related to business agility.</i></p>
   </figcaption>
 </figure>
 
