--- a/_posts/2022-09-02-naming-things.html
+++ b/_posts/2022-09-02-naming-things.html
@@ -12,8 +12,7 @@ image:
 <figure>
   <img src="/assets/images/posts/naming_things.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Photo by <a href="https://unsplash.com/@cristina_gottardi">Cristina Gottardi</a> on <a href="https://unsplash.com/s/photos/culture">Unsplash</a>      </i>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@cristina_gottardi">Cristina Gottardi</a> on <a href="https://unsplash.com/s/photos/culture">Unsplash</a></i></p>
   </figcaption>
 </figure>
 
