--- a/_posts/2022-09-09-courage-to-change.html
+++ b/_posts/2022-09-09-courage-to-change.html
@@ -12,8 +12,7 @@ image:
 <figure>
   <img src="/assets/images/posts/courage_to_change.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Photo by <a href="https://unsplash.com/@okta">Tania Malréchauffé</a> on <a href="https://unsplash.com/s/photos/climate-change">Unsplash</a></i>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@okta">Tania Malréchauffé</a> on <a href="https://unsplash.com/s/photos/climate-change">Unsplash</a></i></p>
   </figcaption>
 </figure>
 <p>Change is a wonderful thing. Why? Because <em>to change is to learn</em>. It's a chance to build on what works, and then become better at it. It's a chance to achieve better outcomes.</p>
