--- a/_posts/2022-11-30-winter-war-with-the-russian-terrorist-state.html
+++ b/_posts/2022-11-30-winter-war-with-the-russian-terrorist-state.html
@@ -11,8 +11,7 @@ image:
 <figure>
   <img src="/assets/images/posts/winter_war.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      A Finnish Maxim M/09-21 machine gun crew during the Winter War. <i>Photo on <a href="https://en.wikipedia.org/wiki/Winter_War">Wikipedia</a></i>
+    <p class="figcaption">A Finnish Maxim M/09-21 machine gun crew during the Winter War. <i>Photo on <a href="https://en.wikipedia.org/wiki/Winter_War">Wikipedia</a></i></p>
   </figcaption>
 </figure>
 
