--- a/_posts/2022-12-30-2022-when-the-masks-fell-off.html
+++ b/_posts/2022-12-30-2022-when-the-masks-fell-off.html
@@ -17,8 +17,7 @@ image:
 <figure>
   <img src="/assets/images/posts/2022_when_the_masks_fell_off.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      Photo by <a href="https://unsplash.com/@allewollenalex">Alexander Kagan</a> on <a href="https://unsplash.com/photos/rkji9hajIeM">Unsplash</a>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@allewollenalex">Alexander Kagan</a> on <a href="https://unsplash.com/photos/rkji9hajIeM">Unsplash</a></i></p>
   </figcaption>
 </figure>
 
@@ -63,8 +62,7 @@ image:
 <figure>
   <img src="/assets/images/posts/no_planet_b.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      There is no Planet B. <i>Photo by <a href="https://unsplash.com/fr/@li_anlim">Li-An Lim</a> on <a href="https://unsplash.com/photos/ycW4YxhrWHM">Unsplash</a></i>
+    <p class="figcaption">There is no Planet B. <i>Photo by <a href="https://unsplash.com/fr/@li_anlim">Li-An Lim</a> on <a href="https://unsplash.com/photos/ycW4YxhrWHM">Unsplash</a></i></p>
   </figcaption>
 </figure>
 
@@ -98,8 +96,7 @@ image:
 <figure>
   <img src="/assets/images/posts/2022_books.png" alt="" />
   <figcaption>
-    <p class="figcaption">
-      The books I read in 2022. <i>See <a href="https://www.goodreads.com/user_challenges/32230931">my 2022 reading challenge on Goodreads</a>.</i>
+    <p class="figcaption">The books I read in 2022. <i>See <a href="https://www.goodreads.com/user_challenges/32230931">my 2022 reading challenge on Goodreads</a>.</i></p>
   </figcaption>
 </figure>
 
