--- a/_posts/2023-04-04-finland-joins-nato.html
+++ b/_posts/2023-04-04-finland-joins-nato.html
@@ -11,8 +11,7 @@ image:
 <figure>
   <img src="/assets/images/posts/NATO_logo.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      The official <a href="https://www.nato.int/"><abbr title="North Atlantic Treaty Organization">NATO</abbr></a> logo.
+    <p class="figcaption">The official <a href="https://www.nato.int/"><abbr title="North Atlantic Treaty Organization">NATO</abbr></a> logo.</p>
   </figcaption>
 </figure>
 
@@ -23,8 +22,7 @@ image:
 <figure>
   <img src="/assets/images/posts/finland_joins_nato.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      Celebrating Finland joining NATO on 4 April 2023, in the Italian Alps. A day to remember.
+    <p class="figcaption">Celebrating Finland joining NATO on 4 April 2023, in the Italian Alps. A day to remember.</p>
   </figcaption>
 </figure>
 
