--- a/_posts/2023-06-20-agile-habits.html
+++ b/_posts/2023-06-20-agile-habits.html
@@ -15,8 +15,7 @@ image:
 <figure>
   <img src="/assets/images/posts/agile_habits.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Photo by <a href="https://unsplash.com/@emmaou">Emma Ou</a> on <a href="https://unsplash.com/photos/0hkx30AxzKs">Unsplash</a></i>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@emmaou">Emma Ou</a> on <a href="https://unsplash.com/photos/0hkx30AxzKs">Unsplash</a></i></p>
   </figcaption>
 </figure>
 
@@ -30,8 +29,7 @@ image:
 <figure>
   <img src="/assets/images/posts/habit_loop.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      The three parts of the Habit Loop: a Cue, a Routine and a Reward. Image Credit: <a href="https://charlesduhigg.com/">Charles Duhigg</a>.
+    <p class="figcaption">The three parts of the Habit Loop: a Cue, a Routine and a Reward. Image Credit: <a href="https://charlesduhigg.com/">Charles Duhigg</a>.</p>
   </figcaption>
 </figure>
 
@@ -67,8 +65,7 @@ image:
 <figure>
   <img src="/assets/images/posts/habit_books.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      Two great books: <i><a href="https://www.amazon.com/Atomic-Habits-Proven-Build-Break/dp/1847941842">Atomic Habits</a> by James Clear, and <a href="https://www.amazon.com/Power-Habit-What-Life-Business/dp/081298160X ">The Power of Habit</a> by Charles Duhigg.</i>
+    <p class="figcaption">Two great books: <i><a href="https://www.amazon.com/Atomic-Habits-Proven-Build-Break/dp/1847941842">Atomic Habits</a> by James Clear, and <a href="https://www.amazon.com/Power-Habit-What-Life-Business/dp/081298160X ">The Power of Habit</a> by Charles Duhigg.</i></p>
   </figcaption>
 </figure>
 
