--- a/_posts/2022-07-15-scrum-or-kanban-a-false-equivalence.html
+++ b/_posts/2022-07-15-scrum-or-kanban-a-false-equivalence.html
@@ -12,8 +12,7 @@ image:
 <figure>
   <img src="/assets/images/posts/scrum-or-kanban.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Photo by <a href="https://unsplash.com/@bernardhermant">Bernard Hermant</a> on <a href="https://unsplash.com/s/photos/architecture-abstract">Unsplash</a></i>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@bernardhermant">Bernard Hermant</a> on <a href="https://unsplash.com/s/photos/architecture-abstract">Unsplash</a></i></p>
   </figcaption>
 </figure>
 
