--- a/_posts/2022-07-25-distributed-agile-teams.html
+++ b/_posts/2022-07-25-distributed-agile-teams.html
@@ -13,8 +13,7 @@ image:
 <figure>
   <img src="/assets/images/posts/distributed_agile_teams.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Photo by <a href="https://unsplash.com/@shs521">Susan Holt Simpson</a> on <a href="https://unsplash.com/s/photos/%22building-blocks%22">Unsplash</a></i>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@shs521">Susan Holt Simpson</a> on <a href="https://unsplash.com/s/photos/%22building-blocks%22">Unsplash</a></i></p>
   </figcaption>
 </figure>
 
@@ -63,8 +62,7 @@ image:
 <figure>
   <img src="/assets/images/posts/team_books.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Some of my favourite books on effective teams and leadership.</i>
+    <p class="figcaption"><i>Some of my favourite books on effective teams and leadership.</i></p>
   </figcaption>
 </figure>
 
@@ -73,8 +71,7 @@ image:
 <figure>
   <img src="/assets/images/posts/distributed_team_books.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Some additional good books on distributed teams, unlearning/relearning, and leadership.</i>
+    <p class="figcaption"><i>Some additional good books on distributed teams, unlearning/relearning, and leadership.</i></p>
   </figcaption>
 </figure>
 
