--- a/_posts/2022-08-22-efficient-distributed-teams.html
+++ b/_posts/2022-08-22-efficient-distributed-teams.html
@@ -12,8 +12,7 @@ image:
 <figure>
   <img src="/assets/images/posts/efficient-distributed-teams.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Photo by <a href="https://unsplash.com/@crisdinoto">Cris DiNoto</a> on <a href="https://unsplash.com/s/photos/graphic-art">Unsplash</a></i>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@crisdinoto">Cris DiNoto</a> on <a href="https://unsplash.com/s/photos/graphic-art">Unsplash</a></i></p>
   </figcaption>
 </figure>
 
