--- a/_posts/2022-09-05-stand-with-ukraine.html
+++ b/_posts/2022-09-05-stand-with-ukraine.html
@@ -11,8 +11,7 @@ image:
 <figure>
   <img src="/assets/images/posts/nasa_earth.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Photo by <a href="https://unsplash.com/@nasa">NASA</a> on <a href="https://unsplash.com/s/photos/nasa">Unsplash</a></i>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@nasa">NASA</a> on <a href="https://unsplash.com/s/photos/nasa">Unsplash</a></i></p>
   </figcaption>
 </figure>
 
