--- a/_posts/2023-07-13-on-happiness.html
+++ b/_posts/2023-07-13-on-happiness.html
@@ -14,8 +14,7 @@ image:
 <figure>
   <img src="/assets/images/posts/on_happiness.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">
-      <i>Photo by <a href="https://unsplash.com/@mariodobelmann">Mario Dobelmann</a> on <a href="https://unsplash.com/photos/QKBc8uYQDH0">Unsplash</a></i>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@mariodobelmann">Mario Dobelmann</a> on <a href="https://unsplash.com/photos/QKBc8uYQDH0">Unsplash</a></i></p>
   </figcaption>
 </figure>
 
